[tool.poetry]
name = "textual-tutorial"
version = "0.1.0"
description = ""
authors = ["kyle <j.kyle.omalley@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.35.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
